# Harmograph

./: .gitignore
.kiro/specs/harmograph/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .dockerignore  Dockerfile  README.md  fly.toml  modal_app.py  pyproject.toml  requirements-docker.txt  requirements.txt
backend/app/: __init__.py  config.py  elements.py  errors.py  main.py  separation.py  validation.py
backend/tests/: test_api_integration.py  test_deploy_smoke.py  test_health_meta.py  test_separation.py  test_server_errors.py  test_skeleton.py  test_validation.py
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: smoke.test.ts
frontend/src/analysis/: AnalysisEngine.integration.test.ts  AnalysisEngine.partialFailure.property.test.ts  AnalysisEngine.test.ts  AnalysisEngine.ts  index.ts  meydaEssentiaExtractor.ts  normalize.ts  types.ts
frontend/src/audio/: AudioEngine.clampSeek.property.test.ts  AudioEngine.integration.test.ts  AudioEngine.lifecycle.test.ts  AudioEngine.test.ts  AudioEngine.ts  index.ts
frontend/src/components/: CanvasStage.pointerRouting.integration.test.tsx  CanvasStage.pointerRouting.test.tsx  CanvasStage.tsx  FlowVisualizer.tsx  GraphStyle.defaultResolution.property.test.ts  HarmographPage.test.tsx  HarmographPage.tsx  P5Canvas.tsx  StemLab.tsx  UIOverlay.tsx  index.ts
frontend/src/config/: appConfig.endpoint.smoke.test.ts  appConfig.test.ts  appConfig.ts  (+1 more)
(+66 files in other folders)
